[package]
name = "cosmos-chain-registry"
description = "A library for interacting with the Cosmos chain registry repository"
authors = ["Cosmos Labs"]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/cosmos-chain-registry/latest/cosmos-chain-registry/"
repository = "https://github.com/Cordtus/chain-registry-rust"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
assay = "0.1"
eyre = "0.6"
http = "0.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

[features]
default = ["cache"]
cache = []
